# ava_backtest_api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup-docker-access.sh  start.sh
.github/workflows/: ci.yml
docs/: DESIGN_REVIEW_V3.md  architecture.md
docs/analysis/: v1_shortcomings.md
docs/api/: openapi.yaml
docs/config/: CONFIGURATION.md
docs/design/: API_AND_UI.md  ARCHITECTURE.md  DATA_LAYER.md  EXECUTION_ENGINE.md  IMPLEMENTATION_PLAN.md  STRATEGY_PATTERN.md
docs/diagrams/: data_flow.excalidraw  module_layout.excalidraw  strategy_lifecycle.excalidraw  system_architecture.excalidraw
docs/examples/: example_ema_crossover.py  example_mean_reversion.py  example_multi_timeframe.py
docs/indicators/: INDICATOR_CATALOG.md
docs/schema/: schema.sql
docs/strategies/: ADDING_STRATEGIES.md  CATALOG.md
migrations/: env.py
migrations/versions/: 001_base_schema.sql  002_multi_market.sql
scripts/: sync_and_backtest.py
src/: main.py
src/api/v2/: analytics.py  app.py  backtests.py  data.py  errors.py  markets.py  models.py  strategies.py  sync.py  universes.py  websocket.py
src/core/: config.py
src/core/analytics/: metrics.py  optimization.py  portfolio_analytics.py  walkforward.py
src/core/data/: __init__.py
src/core/execution/: costs.py  data_window.py  engine.py  fills.py  pipeline.py  portfolio.py  run_store.py
src/core/markets/: registry.py
src/core/strategy/: base.py  registry.py
src/strategies/: __init__.py  helpers.py
src/strategies/classic/: bollinger_bands.py  macd_crossover.py  momentum_breakout.py  rsi_mean_reversion.py  sma_crossover.py
src/strategies/custom/: __init__.py  bb_squeeze.py  (+118 more)
tests/unit/: test_api.py  test_data_layer.py  test_execution.py  test_markets.py  test_metrics.py  test_strategies.py
(+14 files in other folders)
